fixed alignment bugs with guessbox and wordBox

--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@ body {
 	background-size: cover;
 	text-align: center;
 	font-family: 'Rye';
+	/*vertical-align: top;*/
+}
+
+div {
+	/*border: 1px solid purple;*/
 }
 
 #Title {
@@ -41,11 +46,17 @@ body {
 	transition: 0.5s ease;
 }
 
+#gallows-wrapper {
+	margin-top: 20px;
+	display: inline-block;
+}
+
 #gallows {
 	display: grid;
 	align-items: end;
-    grid-template-columns: repeat(20, 2fr);
+    grid-template-columns: repeat(6, auto) repeat(9, 55px) repeat(5, auto);
     grid-template-rows: auto repeat(10, 15px);
+    /*margin: 0;*/
     /*border: 1px solid red;*/
 }
 
@@ -55,7 +66,7 @@ body {
 	/*border-right: ;*/
 	padding-left: 40px;
 	grid-column: 7/8;
-	width: 100%;
+	width: 50px;
 	/*grid-row: 4/16;*/
 }
 
@@ -67,13 +78,16 @@ body {
 	height: 100%;
 	grid-column: 7/11;
 	grid-row: 2/7;
-	border: 3px solid black;
-	background-color: black
+	border: 5px solid black;
+	border-bottom: 0; 
+	/*background-color: black;*/
 }
 
 .gallow-step {
+	width: 50px;
 	height: 100%;
 	border: 3px solid black;
+	border-bottom: 0; 
 	background-color: black;
 }
 
@@ -99,9 +113,17 @@ body {
 
 #hangman-picture {
 	width: 50px;
+	transition: 1s ease;
+}
+
+.step0 {
 	grid-column: 15;
-	grid-row: 6;
-	transition: 0.5s ease;
+	grid-row: 6;	
+}
+
+.step1 {
+	grid-column: 14;
+	grid-row: 5;
 }
 
 #gallow-mast {
@@ -114,15 +136,6 @@ body {
 	border-left: 2px solid black;
 	grid-column: 11;
 	grid-row: 2/3;
-}
-
-#prisonerDiv {
-	/*border: 2px solid blue;*/
-	grid-column: 10/12;
-	grid-row: 3/10;
-	display: grid;
-	grid-template-columns: repeat(10, 2fr);
-    grid-template-rows: repeat(20, 1fr);
 }
 
 .prisoner {
@@ -167,9 +180,14 @@ body {
 }
 
 #guessed-letter-container {
-	grid-column: 14/20;\
+	width: 20%;
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 100px;
+	margin-top: 20px;
+	/*grid-column: 17/19;*/
 	/*display: flex;*/
-	/*border: 2px solid green;*/
+	/*border: 2px solid blue;*/
 }
 
 #guesses {
@@ -194,7 +212,7 @@ body {
 
 #putBefore {
 	font-size: 10px;
-	color: transparent;
+	color: black;
 }
 
 .wordBox {
